# nekoton-codegen

./: .gitignore  Cargo.toml  README.md
src/: main.rs  reserved_words.rs
test/: SafeMultisigWallet.abi.json  test.txt
